<resources>
    <string name="app_name">Dhote Chicken</string>
    <string name="lbl_splash_logo">Splash Logo</string>
    <string name="title_home">Home</string>
    <string name="title_splash">Splash</string>
    <string name="title_login">Login</string>
    <string name="lbl_college_name">Sri Lanka Institute of Information Technology</string>
    <string name="lbl_college_address">SLIIT Malabe Campus, New Kandy Rd, Malabe 10115, Sri Lanka</string>
    <string name="lbl_login">Login</string>
    <string name="title_forget_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username">Username</string>
    <string name="action_submit">Submit</string>
    <string name="lbl_forgot_password_message">Password will be sent on your register mobile no or email address.</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="image_description">Image Description</string>
    <string name="msg_progress_dialog">Loading..</string>
    <string name="hint_search">Search</string>
    <string name="bundle">Bundle</string>
    <string name="student">Student</string>
    <string name="subject">Subject</string>
    <string name="select_bundle">Select Bundle</string>
    <string name="select_student">Select Student</string>
    <string name="select_subject">Select Subject</string>
    <string name="clear">Clear</string>
    <string name="pick_image">Select Image</string>
    <string name="next">Next</string>
    <string name="menu_scan_answer_sheet">Scan Answer Sheet</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="select_session">Select Session</string>
    <string name="session">Session</string>
    <string name="title_log_out">Logout</string>
    <string name="msg_logout">Do you want to Log out ?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="default_count">0/44</string>
    <string name="error_pick_file">Please select answer sheet!</string>
    <string name="seat_no">Seat No</string>
    <string name="bundle_no">Bundle No</string>
    <string name="create_one"><u>Create One</u></string>
    <string name="registration">Registration</string>
    <string name="have_an_account">Don\'t have an account?</string>
    <string name="tv_i_am_a">I am a</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="menu_student_registration">Student Registration</string>
    <string name="menu_faculty_registration">Faculty Registration</string>
    <string name="agree_with">I agree with the</string>
    <string name="tearm_condition"><u>terms and conditions</u></string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms">This Application Software is developed and owned by MasterSoft ERP Solutions Pvt. Ltd., Nagpur, India (MasterSoft). MasterSoft reserves its right of sole discretion to modify, update and/or terminate access/use of this Software at any point of time without notice. \n\n Users must visit “Terms of use” link periodically to understand and abide by the applicable Terms of Use. By accessing this Software, it shall be implied that the User has read and agreed with the same, and any violation thereof shall be deemed to be willful act/omission on the part of such User. \n\n This Software permits access only to its Registered Users having valid login credentials, and any attempt of access through invalid/stolen/borrowed credentials is explicitly prohibited. \n\n Usage upon access is restricted to the Software Menu appearing on the screen, and any attempt to enlarge such access, to hack into or to illicitly use the Software shall be actionable under Cyber Laws and other relevant Laws of India. \n\n By accessing/using this Software, the User shall be implied to have acknowledged and granted permission for all of its activities in the Software to be monitored for the above purposes by MasterSoft.</string>
    <string name="job_title">Job Title</string>
    <string name="enter_job_title">Enter Job Title</string>
    <string name="lbl_planning_to_train">How many people are you planning to train ?</string>
    <string name="please_select">Please Select</string>
    <string name="traing_need">Whats Your Training Needs</string>
    <string name="enter_training_need">Enter your training needs</string>
    <string name="faculty">Faculty</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="welocom_msg">Welcome to Be Future Ready</string>
    <string name="lbl_trending_course">Trending Courses</string>
    <string name="lbl_view_all">View all</string>
    <string name="lbl_newly_added">Newely Added</string>
    <string name="error_enter_full_name">Please enter your name.</string>
    <string name="error_enter_email">Please enter your email.</string>
    <string name="error_enter_correct_email">Please enter correct email format.</string>
    <string name="error_enter_contact">Please enter your phone number.</string>
    <string name="error_enter_correct_contact">Please enter correct phone number.</string>
    <string name="error_select_term_condition"><![CDATA[Please accept terms & condition.]]></string>
    <string name="error_enter_job_title">Please enter job title.</string>
    <string name="error_enter_planning">Please select no of people.</string>
    <string name="error_enter_training_needs">Please enter your training needs.</string>
    <string name="menu_my_learning">My Learning</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="lbl_login_create_acc">Login/Create Account for order</string>
    <string name="lbl_enter_mobile_no">Enter Mobile No.</string>
    <string name="lbl_trems_condition">By Clicking, I accept the <b>Terms &amp; Condition &amp; Privacy Policy.</b></string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_verification_code">Please type the verification code sent to</string>
    <string name="verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="not_recive_code">I don\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="action_settings">Setting</string>
    <string name="menu_category">Category</string>
    <string name="hint_search_product">Search for any product...</string>
    <string name="lbl_shop_by_category">Shop by category</string>
    <string name="menu_categories">Categories</string>
    <string name="lbl_add">ADD</string>
    <string name="menu_cart">Your Cart</string>
    <string name="lbl_slot_time">Select Time Slot</string>
    <string name="lbl_proceed_to_pay">Proceed to Pay</string>
    <string name="lbl_offer">Offers</string>
    <string name="lbl_apply_coupon">Apply Coupon</string>
    <string name="lbl_bill_detail">Bill Details</string>
    <string name="lbl_item_total">Item Total</string>
    <string name="lbl_tax_charges"><u><![CDATA[Taxes & Chages]]></u></string>
    <string name="lbl_total_pay">Total Pay</string>
    <string name="lbl_today">Today\'s</string>
    <string name="lbl_tomorrows">Tomorrow</string>
    <string name="menu_sub_category">Sub Category</string>
    <string name="menu_sub_category_detail">Sub Category Detail</string>
    <string name="lbl_best_seller">Best Seller</string>
    <string name="lbl_boneless_chicken">Boneless Chicken</string>
    <string name="lbl_enter_coupon">Enter Coupon Code</string>
    <string name="lbl_more_offer">More offers</string>
    <string name="lbl_percent_off">200% OFF</string>
    <string name="lbl_offer_description">Save ₹ 145 with RUPAY100 \norder using HDFC bank card</string>
    <string name="lbl_max_offer_description">Maximun discount upto ₹100 on orders of above ₹499</string>
    <string name="menu_apply_coupon">Apply Coupon</string>
    <string name="lbl_office">Office</string>
    <string name="lbl_add_new_location">Add New Location</string>
    <string name="lbl_order_cancellation_note">Order cancellation allowed only before Dispatch.</string>
    <string name="menu_order_status">Order Status</string>
    <string name="lbl_cancel_order">CANCEL ORDER</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="pincode">Pincode</string>
    <string name="flat_no">Flat, House no, Building, Company, Apartment</string>
    <string name="area">Area, Street, Sector, Village</string>
    <string name="landmark">Landmark</string>
    <string name="city">Town/City</string>
    <string name="state">State</string>
    <string name="menu_add_address">Add Address</string>
    <string name="api_razorpay_key">rzp_test_qdt2klLDfdXHdQ</string>
    <string name="error_number">Please enter correct phone number</string>
    <string name="error_enter_number">Please enter phone number!</string>
    <string name="error_enter_correct_otp">Please enter correct OTP!</string>
    <string name="payment_sucess">Payment is successfully Done. Please wait...</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_account">Account</string>
    <string name="rupee">₹</string>
    <string name="lbl_orders">Orders</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="lbl_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="lbl_faq">FAQs</string>
    <string name="privacy">Privacy Policy</string>
    <string name="lbl_logout">Logout</string>
    <string name="menu_orders">Orders</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_demo_text">Separation of text and non-text is an essential processing step for any document analysis system. Therefore, it is important to have a clear understanding of the state-of-the-art of text/non-text separation in order to facilitate the development of efficient document processing systems. This paper first summarizes the technical challenges of performing text/non-text separation. It then categorizes offline document images into different classes according to the nature of the challenges one faces, in an attempt to provide insight into various techniques presented in the literature. The pros and cons of various techniques are explained wherever possible. Along with the evaluation protocols, benchmark databases, this paper also presents a performance comparison of different methods. Finally, this article highlights the future research challenges and directions in this domain.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="update">Update</string>
    <string name="address_type">Address Type</string>
    <string name="address_type_hint">Home, Office, etc.</string>
</resources>