<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="HomeFragmentBinding">

        <variable
            name="categoryAdapter"
            type="com.iitms.bfr.ui.adapter.HomeCategoryAdapter" />


        <variable
            name="bestSellerAdapter"
            type="com.iitms.bfr.ui.adapter.MenuAdapter" />

        <variable
            name="bonelessAdapter"
            type="com.iitms.bfr.ui.adapter.MenuAdapter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.view.fragment.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/dp_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_08"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_05"
                    app:cardCornerRadius="@dimen/dp_07">

                    <TextView
                        style="@style/CustomTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="@dimen/dp_10"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_search_product"
                        android:padding="@dimen/dp_08"
                        android:textSize="@dimen/sp_16"
                        app:drawableTint="@color/colorLightGray" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_05"
                    app:cardCornerRadius="@dimen/dp_10">

                    <com.daimajia.slider.library.SliderLayout
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_150" />

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/CustomTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_05"
                    android:text="@string/lbl_shop_by_category"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adapter="@{categoryAdapter}"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_home_category" />

                <TextView
                    style="@style/CustomTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_05"
                    android:text="@string/lbl_best_seller"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adapter="@{bestSellerAdapter}"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_menu" />


                <TextView
                    style="@style/CustomTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_05"
                    android:text="@string/lbl_boneless_chicken"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adapter="@{bonelessAdapter}"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_menu" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
